Fixing QTabWidget alignment in mac

--- a/src/resources/css/common/MainWindow.css
+++ b/src/resources/css/common/MainWindow.css
@@ -75,3 +75,8 @@ QTabBar::tab
     font-size: 11px;
     color: black;
  }
+
+QTabWidget::tab-bar
+{
+    left: 0;
+}
